# DEADSOULS2

./: .gitignore  BACKUP_INSTRUCTIONS.md  BACKUP_SCRIPTS_SUMMARY.md  FINAL_RESULTS_EPOCH5.md  GRADIENT_DESCENT_AND_BACKPROP.md  HOW_TO_USE_BACKUP_SCRIPTS.md  LIMITATIONS_FIX.md  MODEL_TEST_RESULTS.md  PLAN_FOR_TOMORROW.md  RAG_IMPLEMENTATION.md  RAG_INTEGRATION_PLAN.md  README.md  README_GOGOL_MAS.md  README_improvements.md  TRAINING_STATUS_EPOCH4_TO_5.md  TRAINING_STATUS_SUMMARY.md  architecture_diagram.txt  architecture_visualization.md  auto_backup_checker.py  auto_backup_checkpoints.py  backup_checkpoints.py  check_dataset.py  check_gpu.py  check_training_progress.py  config.py  config_unified.py  continue_to_epoch5.py  continue_training_from_epoch2.py  create_extended_dataset.py  dataset_report.html  debug_repetitions.py  demo_mas.py  download_gogol_texts.py  download_model.py  evaluate_model.py  experiment_tracker.py  finetune.py  finetune_with_monitoring.py  generate.py  gogol_model_test_results.json  (+37 more)
