[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gogol-mas"
version = "0.1.0"
description = "Multi-Agent System для реставрации второго тома «Мёртвых душ»"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "chromadb>=0.5.0",
    "langchain-huggingface>=0.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
